--- a/appveyor.yml
+++ b/appveyor.yml
@@ -80,9 +80,9 @@ build_script:
         $goma_login = python $env:LOCAL_GOMA_DIR\goma_auth.py info
         if ($goma_login -eq 'Login as Fermi Planck') {
           Write-warning "Goma authentication is correct";
-        # } else {
-        #   Write-warning "WARNING!!!!!! Goma authentication is incorrect; please update Goma auth token.";
-        #   $host.SetShouldExit(1)
+        } else {
+          Write-warning "WARNING!!!!!! Goma authentication is incorrect; please update Goma auth token.";
+          # $host.SetShouldExit(1)
         }
       }
   - ps: $env:CHROMIUM_BUILDTOOLS_PATH="$pwd\src\buildtools"
